# OTTR

./: .gitignore  README.md  pyproject.toml
notebooks/: Figure2.ipynb  Figure2_ExtDFigure2.ipynb  Figure3.ipynb  Figure4.ipynb  Figure5.ipynb  Figure6.ipynb
notebooks/data/: EV37_metrics.csv  EV37_start.npy  EV38_displacement.npy  EV38_start.npy  EV39_displacement.npy  EV39_end.npy  EV39_metrics.csv  EV39_start.npy  cell_type_movement.pkl  cell_type_movement_cortex.pkl  counts.pkl  division_points.pkl  tissue_metrics.pkl
src/OTTR/pipeline/: cell_tracking.py  config.py  image_processing.py  segment_images.py  utils.py
src/OTTR/preprocessing/: ND2_find_BG.py  ND2_parser_FOVs.py  stitching.py  utils.py
src/OTTR/segmentation/: CellPoseSegmenter.py  WatershedSegmenter.py  utils.py
src/OTTR/tools/: track_measures.py
